Last details to polish design

--- a/SeedProject_V6/Views/Home/Index.cshtml
+++ b/SeedProject_V6/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
                     <div class="">
                         <h5 class="card-title text-uppercase">English learning</h5>
                         <p class="card-text">For kids who are struggling with scores and confidence and have slipped behind. We guarantee results!</p>
-                        <a href="#" class="btn btn-primary">Learn more</a>
+                        <a asp-action="EnglishLearning" class="btn btn-primary">Learn more</a>
                     </div>
                 </div>
                 <div class="offer-divider"></div>
@@ -74,7 +74,7 @@
                     <div class="">
                         <h5 class="card-title text-uppercase">Math & Science</h5>
                         <p class="card-text">For the smartest</p>
-                        <a href="#" class="btn btn-primary">Learn more</a>
+                        <a asp-action="MathScience" class="btn btn-primary">Learn more</a>
                     </div>
                 </div>
                 <div class="offer-divider"></div>
@@ -85,7 +85,7 @@
                     <div>
                         <h5 class="card-title text-uppercase">Credit & School application</h5>
                         <p class="card-text">Helping you with school and credit applications</p>
-                        <a href="#" class="btn btn-primary">Learn more</a>
+                        <a asp-action="SeedCredit" class="btn btn-primary">Learn more</a>
                     </div>
                 </div>
                 <div class="offer-divider"></div>
@@ -96,7 +96,7 @@
                     <div>
                         <h5 class="card-title text-uppercase">Test prep</h5>
                         <p class="card-text">For kids who are on the fast track or need help with advanced coursework, homework and big tests.</p>
-                        <a href="#" class="btn btn-primary">Learn more</a>
+                        <a asp-action="TestPrep" class="btn btn-primary">Learn more</a>
                     </div>
                 </div>
             </div>
